--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags:right-sidebar, custom-background, flexible-header, custom-header, blog, theme-options
-Text Domain: feeling
+Text Domain: a_rosebud_rejoicing
 @link https://make.wordpress.org/themes/handbook/review/required/theme-tags/
 
 Have fun. Build, share, and be stupid.
